feat: final polish
